--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "bootstrap": "4.1.3",
+    "bootstrap": "^4.3.1",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "16.3.2",
     "react-dom": "16.3.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.1.2",
     "react-scrollable-anchor": "0.6.1",
     "reactstrap": "6.3.1"
   },
@@ -29,5 +29,17 @@
   "homepage": "https://swkeever.github.io",
   "devDependencies": {
     "gh-pages": "^2.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
